assets/css/style.css
/* ... */
.irs--round .irs-handle  {
	border-color: #337ab7;
	top: 28px;
    width: 18px;
    height: 18px;
}

.irs--round .irs-from, .irs--round .irs-to, .irs--round .irs-single {
	background-color: #337ab7;
	font-size: 10px;
}

.irs-title .mdi {
	font-size: 20px;
    margin-right: 11px;
    opacity: 0.6;
}

.irs--round .irs-min, .irs--round .irs-max {
	font-size: 10px;
}

li.time-slider:first-child {
	padding-bottom: 20px;
}

#filterConnecting li.with-irs {
	padding-bottom: 15px;
    border-bottom: 1px solid #eee;
    margin-bottom: 15px;
}

li.with-irs .irs-title {
	text-align: center;
}

#filterConnecting .irs {
	margin-bottom: 15px;
}

.form-field {
	display: block;
	margin-bottom: 16px;
}
.form-field-right {
	text-align: right;
}
.form-field--is-active .form-field__control::after {
	border-bottom: 2px solid black;
	transform: scaleX(150);
}

.form-field--is-active .form-field__label {
	color: #337ab7;
	font-size: 0.75rem;
  	transform: translateY(-14px);
}

.form-field--is-filled .form-field__label {
	font-size: 0.75rem;
  	transform: translateY(-14px);
}

.form-field__label {
  display: block;
  font-size: 1.2rem;
  font-weight: normal;
  left: 0;
  margin: 0;
  padding: 18px 12px 0 ;
  position: absolute;
  top: 0;
  transition: all 0.4s;
  width: 100%;
}
.form-field__control {
  background: #f9f9f9;
  /* border-radius: 8px 8px 0 0; */
  overflow: hidden;
  position: relative;
  width: 100%;
}
.form-field__control::after {
	border-bottom: 2px solid 0.4s;
	bottom: 0;
	content: "";
	display: block;
	left: 0;
	margin: 0 auto;
	position: absolute;
	right: 0;
	transform: scaleX(0);
	transition: all 0.4s;
	width: 1%;
}
.form-field__input,
.form-field__textarea {
  appearance: none;
  background: transparent;
  border: 0;
  border-bottom: 1px solid #999;
  color: #333;
  display: block;
  font-size: 1.2rem;
  margin-top: 24px;
  outline: 0;
  padding: 0 12px 10px 12px;
  width: 100%;
}
.form-field__textarea {
  height: 150px;
}


.form-field__filter {
	display: block;
	width: 100px;
}
.form-field--is-active .form-field__control__filter::after {
	transform: scaleX(150);
}
.form-field--is-active .form-field__label__filter, .form-field--is-filled .form-field__label__filter  {
	font-size: 0.9rem;
    transform: translateY(-14px);
    width: 42px;
    background-color: white;
    padding: 7px 5px 0 5px;
    margin-left: 10px;
}

.clear_flight_number {
	display: none;
	position: absolute;
    right: 0;
    width: 25px;
    height: 25px;
    font-size: 23px;
}
.form-field--is-filled .clear_flight_number, .form-field--is-active .clear_flight_number {
	display: block;
}
.form-field--is-filled .clear_flight_number:hover, .form-field--is-active .clear_flight_number:hover {
	cursor: pointer;
}
.form-field__label__filter {
  display: block;
  font-size: 14px;
  left: 0;
  margin: 0;
  padding: 7px 15px 12px 10px;
  position: absolute;
  top: 0;
  transition: all 0.4s;
  width: 100%;
}
.form-field__control__filter {
  background: #fff;
  border-radius: 18px;
  position: relative;
  border: 1px solid #dadce0;
  color: #a1a1a1;
  height: 36px;
  margin-left: 10px;
}

.form-field__input__filter {
  appearance: none;
  background: transparent;
  border: 0;
  color: #a1a1a1;
  display: block;
  margin-top: 0;
  outline: 0;
  padding: 7px 15px 12px 10px;
  width: 100%;
}

#clearFilters .clear-all_control__filter {

}
#filterbar #clearFilters  a.dropdown-toggle {
	width: 97px;
}
#filterbar #clearFilters  a.dropdown-toggle .mdi {
	position: absolute;
    right: 5px;
    width: 20px;
    height: 20px;
    font-size: 23px;
}

@media (min-width: 1200px) {
	.flight-details-header {
		display: flex;
		flex-flow: row;
	}
	.results-info-wrapper {
		height: unset;
		border-right: 1px solid #ddd;
		padding-top: 10px;
	}
	.fare-wrapper .fare-block, .fare-wrapper .spacer {
		border-bottom: none;
	}
	.fare-wrapper .fare-block:last-child {
		/* border-right: none; */
	}
	.results_collapsed {
		height: 55px;
	}
	.airline-col {
		padding-left: 12px;
		padding-right: 12px;
	}
	.warning-icons > span {
		width: 20px;
		font-size: 18px;
		height: 16px;
		line-height: 16px;
		margin-bottom: 3px;
	}
	.warning-icons {
		display: flex;
		justify-content: center;
		position: absolute;
		top: 20px;
		left: -7px;
		flex-direction: column;
	}
	.fs-2, .fs-lg-2 {
		font-size: 16px;
		font-weight: 600;
		text-align: left;
	}
	
	.fs-1, .fs-lg-1 {
		font-size: 12px;
		font-weight: 500;
		text-align: left;
	}
	
	.fs-s, .fs-lg-s {
		font-size: 10px;
		font-weight: 400;
		text-align: left;
	}
}

@media (min-width: 300px) and (max-width: 1199px) {
	
	#listcontainer .trip {
		border-top-width: 1px;
		margin-top: 10px;
		/* box-shadow: none;
		-webkit-box-shadow: none; */
	}
	.fare-wrapper {
		/* margin-left: 0;
		margin-right: 0; */
		height: 68px;
	}
	.fare-wrapper .fare-block {
		border: none;
		border-top: 1px solid #ddd;
		border-right: 1px solid #ddd;
		border-bottom: 1px solid #ddd;
		width: 20%;
	}
	.fare-wrapper .fare-block:last-child {
		border-right-width: 0px!important;
	}
		
	.fare-wrapper .col-sm-3 {
		width:25%;
	}

	.fare-wrapper .fare-block .cabin-class .cabin-description {
		font-weight: 500;
		font-size: 12px;
		/* height: 20px; */
	}
	.fare-wrapper .fare-block .cabin-class .branded-fare-class {
		height: 15px;
		margin: 0 5px;
	}
	.fare-wrapper .fare-block .cabin-class .fare-display {
		min-height: 25px;
		font-size: 13px;
	}
	.fare-wrapper .fare-block .cabin-class .policy-error {
		height: 2px;
		line-height: 2px;
	}
	.results-info-wrapper {
		padding-top: 5px;
	}
	img.carrierimg {
		width: 50px!important;
	}
	.fs-xs-2 {
		font-size: 14px !important;
		font-weight: 600;
	}
	
	.fs-xs-1 {
		font-size: 12px;
		font-weight: 500;
	}
	
	.fs-xs-s {
		font-size:8px;
		font-weight: 400;
	}
	.p-xs-0 {
		padding: 0;
	}
	.pl-xs-15 {
		padding-left: 15px!important;
	}
	.pr-xs-15 {
		padding-right: 15px!important;
	}
}

.tripSummary{
		margin: 10px 5px !important;
}
.tripSummary .row {
	margin-bottom: 10px;
}
/* ... */

